Fix transparent sections so they are MUCH simpler and so that we can get rid of the annoying overflow:none on body and html

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -90,11 +90,8 @@ button {  width: auto; overflow: visible; }
 
 .floatleft { float: left }
 
-html, body {
-    height: 100%;
+body, html {
     overflow-x: hidden;
-    overflow-y: hidden;
-    width: 100%;
 }
 
 body {
@@ -118,7 +115,9 @@ body, .middle, #links {
 /*****/
 
 #background {
-    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -2;
@@ -127,14 +126,8 @@ body, .middle, #links {
 header {
 }
 
-.white {
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    z-index: -1;
-    opacity: .8;
-    filter: alpha(opacity = 80);
-}
+.white { background: url(../images/transparent_white.png) }
+.black { background: url(../images/transparent_black.png) }
 
 .tiny {
     font-size: 9pt;
@@ -152,25 +145,25 @@ header {
 .smallSocialButtons .facebook_like {
     position: absolute;
     left: 0px;
-    top: 4px;
+    top: 6px;
 }
 .smallSocialButtons .google-buzz-button {
     position: absolute;
     left: 83px;
-    top: 3px;
+    top: 4px;
     line-height: 22px;
 }
 /*.smallSocialButtons .google-buzz-button span { : 15px }*/
 .smallSocialButtons .twitter-share-button {
     position: absolute;
     left: 145px;
-    top: 4px;
+    top: 6px;
 }
 
 #links {
     font-size: 10pt;
     width: 100%;
-    height: 30px;
+    height: 35px;
     text-align: center;
     position: absolute;
     top: 0;
@@ -180,12 +173,6 @@ header {
     color: #aaa;
     position: relative;
     z-index: 101;
-}
-#links .white {
-    position: absolute;
-    left: 0;
-    background-color: #000;
-    z-index: 100;
 }
 
 #links .links a {
@@ -216,19 +203,14 @@ header {
 }
 
 /* Static pages */
-#staticLayout {
-    height: 100%;
-}
-#staticLayout .staticContentWrapper {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 100%;
-    margin: 30px 0;
+#staticLayout .staticContent {
+    margin: 30px 0 0 0;
 }
 #staticLayout .main {
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
 }
 #staticLayout .logo {
     position: absolute;
@@ -239,7 +221,6 @@ header {
 #staticLayout .text {
     position: absolute;
     top: 0;
-    height: 100%;
     width: 600px;
 }
 #staticLayout img.screenshot {
